crates/embucket-functions/src/tests/regexp/snapshots/regexp_replace/query_regexp_replace_basic_utf8_view.snap
---
source: crates/embucket-functions/src/tests/regexp/regexp_replace.rs
description: "\"SELECT REGEXP_REPLACE(CAST('nevermore1, nevermore2, nevermore3.' as VARCHAR), 'nevermore', 'moreover')\""
---
Ok(
    [
        "+------------------------------------------------------------------------------------------------+",
        "| regexp_replace(Utf8(\"nevermore1, nevermore2, nevermore3.\"),Utf8(\"nevermore\"),Utf8(\"moreover\")) |",
        "+------------------------------------------------------------------------------------------------+",
        "| moreover1, moreover2, moreover3.                                                               |",
        "+------------------------------------------------------------------------------------------------+",
    ],
)
