crates/embucket-functions/src/tests/regexp/snapshots/regexp_replace/query_regexp_replace_remove.snap
---
source: crates/embucket-functions/src/tests/regexp/regexp_replace.rs
description: "\"SELECT REGEXP_REPLACE('It was the best of times, it was the worst of times',\n                      '( ){1,}',\n                      '')\""
---
Ok(
    [
        "+------------------------------------------------------------------------------------------------------+",
        "| regexp_replace(Utf8(\"It was the best of times, it was the worst of times\"),Utf8(\"( ){1,}\"),Utf8(\"\")) |",
        "+------------------------------------------------------------------------------------------------------+",
        "| Itwasthebestoftimes,itwastheworstoftimes                                                             |",
        "+------------------------------------------------------------------------------------------------------+",
    ],
)
